@@ -760,11 +760,6 @@
                     <version>1.5.0</version>
                 </plugin>
                 <plugin>
-                    <groupId>org.codehaus.mojo</groupId>
-                    <artifactId>jaxb2-maven-plugin</artifactId>
-                    <version>2.2</version>
-                </plugin>
-                <plugin>
                     <groupId>org.asciidoctor</groupId>
                     <artifactId>asciidoctor-maven-plugin</artifactId>
                     <version>${asciidoctor-maven-plugin.version}</version>
@@ -1169,9 +1164,6 @@
                             <artifactId>maven-compiler-plugin</artifactId>
                             <configuration>
                                 <fork>true</fork>
-                                <compilerArgs>
-                                    <arg>-J--add-modules=java.xml.ws.annotation</arg>
-                                </compilerArgs>
                             </configuration>
                         </plugin>
                         <plugin>
